--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <title>Shopping Cart</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div id="add-items">
+            <img src="/assets/cat.png" alt="shopping_cart">
             <input name="item" type="text" placeholder="Bread" id="input-field">
             <button id="add-button">Add to cart</button>
             <script src="index.js"></script>
