connect to firebase db

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="/assets/cat.png" alt="shopping_cart">
             <input name="item" type="text" placeholder="Bread" id="input-field">
             <button id="add-button">Add to cart</button>
-            <script src="index.js"></script>
+            <script src="index.js" type="module"></script>
         </div>
     </body>
 </html>
