fetching items from database

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <input name="item" type="text" placeholder="Bread" id="input-field">
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
-                <li>Organe</li>
-                <li>Apple</li>
+                <!-- <li>Organe</li>
+                <li>Apple</li> -->
                 <!-- <li id="shopping-list-item"></li> -->
             </ul>
             <script src="index.js" type="module"></script>
