--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
     </head>
     <body>
         <div id="add-items">
